# StaticCodeEvalTools

./: .gitignore  README.md  all.txt  mypath.txt
wconsteroids/: CMakeLists.txt  README.md  wconsteroids.sln
wconsteroids/testInputFiles/: CmdLineFileExtractor.cpp.txt  CmdLineFileExtractor.h.txt  CommandLineParser.cpp.txt  FileStatistics.cpp.txt  FileStatistics.h.txt
wconsteroids/unitTest/: CMakeLists.txt  CmdLineFileExtractorTest.cpp  CommandLineParserTest.cpp  FileProcessorTest.cpp  FileProcessorTest.h  FileStatisticsTest.cpp  ProgramOptionsTest.cpp  ReportWriterTest.cpp  StatisticsCollectorTest.cpp  bigStatisticsTest.txt  smallerStatTest.txt  testFileStatistics.cpp  unitTest.cpp  unitTest.h  unitTest.vcxproj  unitTest.vcxproj.filters
wconsteroids/wconsteroids/: CMakeLists.txt  CharBuffer.cpp  CharBuffer.h  CmdLineFileExtractor.cpp  CmdLineFileExtractor.h  CommandLineParser.cpp  CommandLineParser.h  Executionctrlvalues.cpp  Executionctrlvalues.h  FileParser.cpp  FileParser.h  FileProcessor.cpp  FileProcessor.h  FileReader.cpp  FileReader.h  FileStatistics.cpp  FileStatistics.h  HelpMe.cpp  HelpMe.h  Makefile  ProgramOptions.cpp  ProgramOptions.h  ReportWriter.cpp  ReportWriter.h  SpecialExceptions.h  StatisticsCollector.cpp  StatisticsCollector.h  UtilityTimer.h  cmdlineoutputtypes.h  main.cpp  wconsteroids.vcxproj  wconsteroids.vcxproj.filters
